Fixes few UI details of the coupon code on mobile

--- a/app/styles/_modules/_buttons.scss
+++ b/app/styles/_modules/_buttons.scss
@@ -223,8 +223,14 @@
 	padding: em(10) 0 em(5);
 	clear: both;
 
+
 	.button {
 		display: inline-block;
+		width: 40%;
+
+		@include media($bp-medium) {
+			width: inherit;
+		}
 	}
 }
 
